specs/opset/ai.onnx/v23/dequantizelinear.md
---
inherit: v21/dequantizelinear
since_version: 23
type_constraints:
  add:
  - name: T3
    doc: The type of the output 'y'.
    allowed:
    - tensor(bfloat16)
    - tensor(float)
    - tensor(float16)
  update:
  - name: T1
    doc: The type of the inputs 'x_zero_point' and 'x'.
    allowed:
    - tensor(float4e2m1)
    - tensor(float8e4m3fn)
    - tensor(float8e4m3fnuz)
    - tensor(float8e5m2)
    - tensor(float8e5m2fnuz)
    - tensor(int16)
    - tensor(int32)
    - tensor(int4)
    - tensor(int8)
    - tensor(uint16)
    - tensor(uint4)
    - tensor(uint8)
  - name: T2
    doc: The type of the input 'x_scale'.
    allowed:
    - tensor(bfloat16)
    - tensor(float)
    - tensor(float16)
outputs:
  update:
  - name: y
    type: T3
    doc: N-D full precision output tensor. It has the same shape as input `x`. The
      data type is specified by the `output_dtype` attribute or, in its absence, the
      type of `x_scale`.
attributes:
  add:
  - name: output_dtype
    type: int
    doc: (Optional) The output data type. If not supplied, the output data type is
      inferred from `x_scale` data type (`T2`)
    required: false
    default: 0
---

The linear dequantization operator. It consumes a quantized tensor, a scale, and a zero point to compute the
full-precision tensor. The dequantization formula is `y = (x - x_zero_point) * x_scale`. `x_scale` and `x_zero_point`
must have the same shape, determining the quantization's granularity: a scalar for per-tensor/per-layer quantization,
a 1-D tensor for per-axis quantization, or have a rank identical to the input for blocked quantization.
See QuantizeLinear for details on quantization granularity.

`x_zero_point` and `x` must have the same type. `x` and `y` must have the same shape. In the case of dequantizing
`int32`, there's no zero point (zero point is supposed to be 0).
`zero-point` is usually not used in the case of float8 and 4-bit types quantization, but the dequantization formula remains the same
for consistency. The output type is determined by the attribute `output_dtype`. If `output_dtype` is not supplied then the output type
is the same as `x_scale`. The output type also determines the precision of the multiplication operation.
